--- a/lesson19/lesson19_1.ipynb
+++ b/lesson19/lesson19_1.ipynb
@@ -1,5 +1,193 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5 entries, 0 to 4\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   key1    5 non-null      object \n",
+      " 1   key2    5 non-null      object \n",
+      " 2   data1   5 non-null      float64\n",
+      " 3   data2   5 non-null      float64\n",
+      "dtypes: float64(2), object(2)\n",
+      "memory usage: 288.0+ bytes\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>key1</th>\n",
+       "      <th>key2</th>\n",
+       "      <th>data1</th>\n",
+       "      <th>data2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a</td>\n",
+       "      <td>one</td>\n",
+       "      <td>-0.008858</td>\n",
+       "      <td>0.572153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>a</td>\n",
+       "      <td>two</td>\n",
+       "      <td>0.301825</td>\n",
+       "      <td>1.264646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>b</td>\n",
+       "      <td>one</td>\n",
+       "      <td>0.000896</td>\n",
+       "      <td>0.052905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>b</td>\n",
+       "      <td>two</td>\n",
+       "      <td>0.610963</td>\n",
+       "      <td>0.823188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>a</td>\n",
+       "      <td>one</td>\n",
+       "      <td>-0.208006</td>\n",
+       "      <td>0.275307</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  key1 key2     data1     data2\n",
+       "0    a  one -0.008858  0.572153\n",
+       "1    a  two  0.301825  1.264646\n",
+       "2    b  one  0.000896  0.052905\n",
+       "3    b  two  0.610963  0.823188\n",
+       "4    a  one -0.208006  0.275307"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#groupby,群組相同值的資料,並使用統計運算\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({'key1':['a', 'a', 'b', 'b', 'a'],\n",
+    "                  'key2':['one', 'two', 'one', 'two', 'one'],\n",
+    "                  'data1': np.random.randn(5),\n",
+    "                  'data2':np.random.randn(5)})\n",
+    "df.info()\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "x    0.293864\n",
+       "y    0.402958\n",
+       "Name: data1, dtype: float64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gp1 = df['data1'].groupby(by=['x','x','x','y','y'])\n",
+    "gp1.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "key1\n",
+       "a    0.084962\n",
+       "b    0.611859\n",
+       "Name: data1, dtype: float64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['data1'].groupby(df['key1']).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "key1  key2\n",
+       "a     one    -0.216863\n",
+       "      two     0.301825\n",
+       "b     one     0.000896\n",
+       "      two     0.610963\n",
+       "Name: data1, dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['data1'].groupby([df['key1'],df['key2']]).sum()"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
@@ -7,7 +195,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.15"
   }
  },
