--- a/lesson19/lesson19_3.ipynb
+++ b/lesson19/lesson19_3.ipynb
@@ -407,6 +407,513 @@
     "#grouped['小費'].mean()\n",
     "grouped['小費'].aggregate('mean')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>日期</th>\n",
+       "      <th>吸煙者</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Fri</th>\n",
+       "      <th>No</th>\n",
+       "      <td>2.812500</td>\n",
+       "      <td>0.898494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>2.714000</td>\n",
+       "      <td>1.077668</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Sat</th>\n",
+       "      <th>No</th>\n",
+       "      <td>3.102889</td>\n",
+       "      <td>1.642088</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>2.875476</td>\n",
+       "      <td>1.630580</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Sun</th>\n",
+       "      <th>No</th>\n",
+       "      <td>3.167895</td>\n",
+       "      <td>1.224785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>3.516842</td>\n",
+       "      <td>1.261151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Thur</th>\n",
+       "      <th>No</th>\n",
+       "      <td>2.673778</td>\n",
+       "      <td>1.282964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>3.030000</td>\n",
+       "      <td>1.113491</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              mean       std\n",
+       "日期   吸煙者                    \n",
+       "Fri  No   2.812500  0.898494\n",
+       "     Yes  2.714000  1.077668\n",
+       "Sat  No   3.102889  1.642088\n",
+       "     Yes  2.875476  1.630580\n",
+       "Sun  No   3.167895  1.224785\n",
+       "     Yes  3.516842  1.261151\n",
+       "Thur No   2.673778  1.282964\n",
+       "     Yes  3.030000  1.113491"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped['小費'].aggregate(['mean','std'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>peak_to_peak</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>日期</th>\n",
+       "      <th>吸煙者</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Fri</th>\n",
+       "      <th>No</th>\n",
+       "      <td>2.812500</td>\n",
+       "      <td>0.898494</td>\n",
+       "      <td>2.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>2.714000</td>\n",
+       "      <td>1.077668</td>\n",
+       "      <td>3.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Sat</th>\n",
+       "      <th>No</th>\n",
+       "      <td>3.102889</td>\n",
+       "      <td>1.642088</td>\n",
+       "      <td>8.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>2.875476</td>\n",
+       "      <td>1.630580</td>\n",
+       "      <td>9.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Sun</th>\n",
+       "      <th>No</th>\n",
+       "      <td>3.167895</td>\n",
+       "      <td>1.224785</td>\n",
+       "      <td>4.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>3.516842</td>\n",
+       "      <td>1.261151</td>\n",
+       "      <td>5.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Thur</th>\n",
+       "      <th>No</th>\n",
+       "      <td>2.673778</td>\n",
+       "      <td>1.282964</td>\n",
+       "      <td>5.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>3.030000</td>\n",
+       "      <td>1.113491</td>\n",
+       "      <td>3.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              mean       std  peak_to_peak\n",
+       "日期   吸煙者                                  \n",
+       "Fri  No   2.812500  0.898494          2.00\n",
+       "     Yes  2.714000  1.077668          3.73\n",
+       "Sat  No   3.102889  1.642088          8.00\n",
+       "     Yes  2.875476  1.630580          9.00\n",
+       "Sun  No   3.167895  1.224785          4.99\n",
+       "     Yes  3.516842  1.261151          5.00\n",
+       "Thur No   2.673778  1.282964          5.45\n",
+       "     Yes  3.030000  1.113491          3.00"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def peak_to_peak(arr):\n",
+    "    return arr.max() - arr.min()\n",
+    "\n",
+    "grouped['小費'].aggregate(['mean','std',peak_to_peak])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>平均</th>\n",
+       "      <th>標準差</th>\n",
+       "      <th>最大-最小</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>日期</th>\n",
+       "      <th>吸煙者</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Fri</th>\n",
+       "      <th>No</th>\n",
+       "      <td>2.812500</td>\n",
+       "      <td>0.898494</td>\n",
+       "      <td>2.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>2.714000</td>\n",
+       "      <td>1.077668</td>\n",
+       "      <td>3.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Sat</th>\n",
+       "      <th>No</th>\n",
+       "      <td>3.102889</td>\n",
+       "      <td>1.642088</td>\n",
+       "      <td>8.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>2.875476</td>\n",
+       "      <td>1.630580</td>\n",
+       "      <td>9.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Sun</th>\n",
+       "      <th>No</th>\n",
+       "      <td>3.167895</td>\n",
+       "      <td>1.224785</td>\n",
+       "      <td>4.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>3.516842</td>\n",
+       "      <td>1.261151</td>\n",
+       "      <td>5.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Thur</th>\n",
+       "      <th>No</th>\n",
+       "      <td>2.673778</td>\n",
+       "      <td>1.282964</td>\n",
+       "      <td>5.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>3.030000</td>\n",
+       "      <td>1.113491</td>\n",
+       "      <td>3.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                平均       標準差  最大-最小\n",
+       "日期   吸煙者                           \n",
+       "Fri  No   2.812500  0.898494   2.00\n",
+       "     Yes  2.714000  1.077668   3.73\n",
+       "Sat  No   3.102889  1.642088   8.00\n",
+       "     Yes  2.875476  1.630580   9.00\n",
+       "Sun  No   3.167895  1.224785   4.99\n",
+       "     Yes  3.516842  1.261151   5.00\n",
+       "Thur No   2.673778  1.282964   5.45\n",
+       "     Yes  3.030000  1.113491   3.00"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped['小費'].aggregate([('平均','mean'),('標準差','std'),('最大-最小',peak_to_peak)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"3\" halign=\"left\">小費</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">總票價</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>筆數</th>\n",
+       "      <th>平均</th>\n",
+       "      <th>最大值</th>\n",
+       "      <th>筆數</th>\n",
+       "      <th>平均</th>\n",
+       "      <th>最大值</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>日期</th>\n",
+       "      <th>吸煙者</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Fri</th>\n",
+       "      <th>No</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2.812500</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>4</td>\n",
+       "      <td>18.420000</td>\n",
+       "      <td>22.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>15</td>\n",
+       "      <td>2.714000</td>\n",
+       "      <td>4.73</td>\n",
+       "      <td>15</td>\n",
+       "      <td>16.813333</td>\n",
+       "      <td>40.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Sat</th>\n",
+       "      <th>No</th>\n",
+       "      <td>45</td>\n",
+       "      <td>3.102889</td>\n",
+       "      <td>9.00</td>\n",
+       "      <td>45</td>\n",
+       "      <td>19.661778</td>\n",
+       "      <td>48.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>42</td>\n",
+       "      <td>2.875476</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>42</td>\n",
+       "      <td>21.276667</td>\n",
+       "      <td>50.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Sun</th>\n",
+       "      <th>No</th>\n",
+       "      <td>57</td>\n",
+       "      <td>3.167895</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>57</td>\n",
+       "      <td>20.506667</td>\n",
+       "      <td>48.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>19</td>\n",
+       "      <td>3.516842</td>\n",
+       "      <td>6.50</td>\n",
+       "      <td>19</td>\n",
+       "      <td>24.120000</td>\n",
+       "      <td>45.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Thur</th>\n",
+       "      <th>No</th>\n",
+       "      <td>45</td>\n",
+       "      <td>2.673778</td>\n",
+       "      <td>6.70</td>\n",
+       "      <td>45</td>\n",
+       "      <td>17.113111</td>\n",
+       "      <td>41.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>17</td>\n",
+       "      <td>3.030000</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>17</td>\n",
+       "      <td>19.190588</td>\n",
+       "      <td>43.11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          小費                  總票價                  \n",
+       "          筆數        平均    最大值  筆數         平均    最大值\n",
+       "日期   吸煙者                                           \n",
+       "Fri  No    4  2.812500   3.50   4  18.420000  22.75\n",
+       "     Yes  15  2.714000   4.73  15  16.813333  40.17\n",
+       "Sat  No   45  3.102889   9.00  45  19.661778  48.33\n",
+       "     Yes  42  2.875476  10.00  42  21.276667  50.81\n",
+       "Sun  No   57  3.167895   6.00  57  20.506667  48.17\n",
+       "     Yes  19  3.516842   6.50  19  24.120000  45.35\n",
+       "Thur No   45  2.673778   6.70  45  17.113111  41.19\n",
+       "     Yes  17  3.030000   5.00  17  19.190588  43.11"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "functions = [('筆數','count'),('平均','mean'),('最大值','max')]\n",
+    "grouped[['小費','總票價']].aggregate(functions)"
+   ]
   }
  ],
  "metadata": {
